--- a/templates/handle_data.html
+++ b/templates/handle_data.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Welcome to FlaskBlog {% endblock %}</h1>
+    <h1>{% block title %} Attendanc App {% endblock %}</h1>
  <form action="{{ url_for('handle_data') }}" method="post">
     <label for="dep">Choose a dep:</label>
   <select name="dep" id="dep">
